[package]
name = "god"
version = "0.0.2"
edition = "2021"
license = "MPL-2.0"
description = "See it all."
repository = "https://github.com/npxTSC/god/"
keywords = ["osint", "dossier"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
dirs = "5.0.1"
eframe = { version = "0.25.0", optional = true }
headless_chrome = { version = "1.0.9", features = ["fetch"] }

[features]
gui = ["dep:eframe"]

[[bin]]
name = "god-gui"
required-features = ["gui"]

[[bin]]
name = "god-cli"
